log
Mon 15 May 2023 01:34:41 PM UTC: 
 hashmap.c | 57 ++++++++++++++++++++++++++-------------------------------
 1 file changed, 26 insertions(+), 31 deletions(-)
 tests:  4|5
total_score: 20/70
77b48a6
Mon 15 May 2023 01:39:48 PM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  5|4
total_score: 30/70
b40af9a
Mon 15 May 2023 01:42:19 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
7a9c381
Mon 15 May 2023 01:42:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
089c7e4
Mon 15 May 2023 01:43:01 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 30/70
bc9244a
Mon 15 May 2023 01:47:25 PM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 40/70
c59cb58
Mon 15 May 2023 01:47:38 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
130a634
Mon 15 May 2023 01:50:53 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
631cf04
Mon 15 May 2023 01:57:24 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:95:7: error: unused variable ‘posicion’ [-Werror=unused-variable]
   95 |   int posicion = hash(key, map->capacity);
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8ba6132
Mon 15 May 2023 01:57:59 PM UTC: 
 hashmap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  6|3
total_score: 40/70
e2b2f7f
Mon 15 May 2023 02:03:31 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
be283af
Mon 15 May 2023 02:04:55 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
0f43f75
Mon 15 May 2023 03:13:32 PM UTC: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
2c310cb
Mon 15 May 2023 03:17:01 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
853aab9
Mon 15 May 2023 03:17:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
bdc9db1
